Fix css spacing issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,33 @@
 /* variables */
+:root {
+    --text-color: #222;
+    --bkg-color-light: rgb(243, 237, 243);
+    --bkg-color-dark: #0f0f0fe7;
+    
+}
+
+main {
+    padding: 15px;
+}
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-image: url('/assets/images/nebula-background.jpg');
     background-size: cover;
-    text-align: left;
-    padding: 10px 50px 20px 50px;
+    padding: 10px 50px;
     margin-bottom: 5px;
     color: aliceblue;
+}
+
+h1 {
+    margin: 0;
+    line-height: 85%;
+}
+
+img {
+    width: 40%;
 }
 
 /*Toggle Dark/Light Mode styling */
@@ -15,18 +36,11 @@ header {
     margin-top: 10px;
 }
 
-body {
-    --text-color: #222;
-    --bkg-color: rgb(243, 237, 243);
-}
-
 body.dark-theme {
-    --text-color: #eee;
-    --bkg-color: #0f0f0fe7;
+    background-color: var(--bkg-color-dark)
 }
 
 body {
-    color: var(--text-color);
     background: var(--bkg-color);
 }
 
@@ -43,7 +57,7 @@ body {
 /* global styles */
 .card-panel {
     border-radius: 10px;
-    padding-bottom: 45px;
+    padding: 10px 30px;
 }
 
 h2 {
@@ -55,11 +69,6 @@ h2 {
 h3 {
     padding-bottom: 10px;
 }
-
-#suncycle, #mooncycle {
-    border-bottom: solid purple 4px;
-}
-
 
 
 /* styles per section */
@@ -85,7 +94,6 @@ h3 {
     display: flex;
     width: 75px;
     height: 75px;
-    float: right;
     align-items: center;
     margin-top: 25px;
 }
@@ -100,89 +108,22 @@ h3 {
     background-color: black;
 }
 
-#sunrise {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
+.weather-icon {
+    width: 40%;
 }
 
-#sunset {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
+.cycle-text {
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
-#moonrise {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
+h4 {
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
-#moonset {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#moon-phase {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-
-#mercury {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#venus {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#mars {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#jupiter {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#saturn {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#uranus {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
-}
-
-#neptune {
-    display: flex;
-    flex-direction: column;
-    width: 150px;
-    height: 150px;
+.row {
+    margin-bottom: 10px;
 }
 
 /* MEDIA QUERIES */
